tests222/tests2/test347.out
lli: <stdin>:1:1: error: expected top-level entity
line 5: variable x is not defined
^
